Renaming add task activities

--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_medium"
     android:orientation="vertical">
 
     <LinearLayout
@@ -10,66 +12,95 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/task_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_small"
-            android:gravity="center_vertical">
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
-            <ImageView
-                android:layout_width="@dimen/form_image_width"
+            <CheckBox
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_medium"
-                android:src="@drawable/ic_title_white_24dp"
-                android:tint="@color/form_icon_color"/>
+                android:layout_margin="@dimen/margin_medium"/>
 
             <TextView
                 android:id="@+id/title_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
-        </LinearLayout>
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:maxLines="1"
+                android:text="@string/checklist"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
+        </android.support.v7.widget.Toolbar>
 
         <LinearLayout
+            android:id="@+id/due_date_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_small"
             android:gravity="center_vertical">
 
             <ImageView
-                android:layout_width="@dimen/form_image_width"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_medium"
-                android:src="@drawable/ic_description_white_24dp"
-                android:tint="@color/form_icon_color"/>
-
-            <TextView
-                android:id="@+id/description_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_small"
-            android:gravity="center_vertical">
-
-            <ImageView
-                android:layout_width="@dimen/form_image_width"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_medium"
+                style="@style/FormIconStyle"
                 android:src="@drawable/ic_access_time_white_24dp"
-                android:tint="@color/form_icon_color"/>
+                />
 
             <TextView
                 android:id="@+id/due_date_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            android:gravity="center_vertical">
+
+            <ImageView
+                style="@style/FormIconStyle"
+                android:src="@drawable/ic_description_white_24dp"
+                />
+
+            <TextView
+                android:id="@+id/description_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/checklist_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/checklist_header_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:text="@string/checklist"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+
+            <TextView
+                android:id="@+id/checklist_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:layout_marginStart="@dimen/no_icon_form_margin"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
+        </LinearLayout>
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
