--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -52,10 +51,5 @@
             android:layout_alignParentBottom="true"
             app:menu="@menu/bottom_navigation_main"/>
     </RelativeLayout>
-
-    <FrameLayout
-        android:id="@+id/bottom_sheet_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"/>
+    
 </android.support.design.widget.CoordinatorLayout>
