--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,5 +10,6 @@
     <dimen name="margin_xsmall">4dp</dimen>
     <dimen name="margin_xxsmall">2dp</dimen>
 
-    <dimen name="form_image_width">40dp</dimen>
+    <dimen name="form_image_width_height">32dp</dimen>
+    <dimen name="no_icon_form_margin">64dp</dimen>
 </resources>
