--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -19,6 +19,7 @@
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <CheckBox
+                android:id="@+id/done_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/margin_medium"/>
